# codetanks

./: .gitignore  .hgignore  BUILD  CODEOWNERS  Earthfile  README.rst  WORKSPACE  build.gradle  demo-bots.yaml  demo-server.yaml  demo.sh  demo.yaml  earthlyw  settings.gradle
.github/: dependabot.yaml
.github/workflows/: dependabot-auto-merge.yml  main.yaml  master.yml
buildSrc/: build.gradle
buildSrc/src/main/groovy/ibidem/gradle/python/: AbstractSetupTask.groovy  BuildPython.groovy  BuildPythonTask.groovy  CollectPython.groovy  DependencyCollection.groovy  GenerateSetup.groovy  InstallPython.groovy  Python.groovy  PythonDependency.groovy  PythonDependencyFactory.groovy  PythonPlugin.groovy  TestPython.groovy
deploy/: tank.yaml.j2
domain/: BUILD  Earthfile  build.gradle  pom.xml  requirements.txt  setup.cfg  setup.py  setup.py.in
domain/ibidem/codetanks/domain/: constants.py  ttypes.py  util.py
domain/java/: BUILD
domain/protobuf/: BUILD  messages.proto
domain/python/: BUILD
domain/src/gen-py/ibidem/codetanks/domain/: ttypes.py  util.py
domain/src/main/python/ibidem/codetanks/domain/: util.py
domain/src/python/ibidem/codetanks/domain/: util.py
domain/tests/: test_util.py
domain/thrift/: messages.thrift
elixir-corny/: .gitignore  README.md  mix.exs
elixir-corny/lib/: corny.ex
elixir-corny/test/: corny_test.exs
gradle/wrapper/: gradle-wrapper.properties
groovy-randomizer/: Earthfile  build.gradle
groovy-randomizer/src/main/groovy/ibidem/codetanks/sample/groovy/: Randomizer.groovy
groovy-randomizer/src/main/resources/: log4j2.xml
rusty-hunter/: Cargo.toml  Earthfile
rusty-hunter/src/: comms.rs  domain.rs  logging.rs  main.rs  settings.rs
sample-groovy/: BUILD  Earthfile  build.gradle
sample-groovy/src/main/groovy/ibidem/codetanks/sample/groovy/: Randomizer.groovy  SampleTank.groovy
sample-rust/: Cargo.toml  Earthfile  build.rs
sample-rust/src/: comms.rs  lib.rs  main.rs
server/: BUILD  Earthfile  bazel_reqs.txt  bazel_test_reqs.txt  build.gradle  defs.bzl  ez_setup.py  fix_grpc_imports.patch  pyproject.toml  requirements.txt  setup.py  setup.py.in  test_requirements.txt
server/ibidem/codetanks/server/: bodies.py  bot.py  broker.py  cli_bot.py  collider.py  com.py  commands.py  config.py  constants.py  debug_util.py  entities.py  events.py  game_server.py  grpc.py  grpc_service.py  main.py  messages.py  peer.py  test_com.py  vec2d.py  vehicle.py  world.py  zeromq.py  zmqwrapper.py
server/src/main/python/ibidem/codetanks/server/: bot.py  cli_bot.py  com.py  game_server.py  world.py
server/src/test/python/: test_com.py  test_game_server.py  test_world.py
server/tests/: run.py  test_app.py  test_broker.py  test_com.py  test_event.py  test_game_server.py  test_messages.py  test_vehicle.py  test_world.py  test_zeromq.py
viewer/: BUILD  Earthfile  bazel_reqs.txt  build.gradle  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.py.in
viewer/ibidem/codecreeps/viewer/: entity_provider.py  main.py
viewer/ibidem/codetanks/viewer/: creep.py  dummy_server.py  entities.py  entity_provider.py  events.py  main.py  print_stats.py  server_proxy.py  vec2d.py  widgets.py
viewer/ibidem/codetanks/viewer/resources/: info.txt  tombstone.xcf  turret.xcf
viewer/src/main/python/ibidem/codetanks/viewer/: entities.py  server_proxy.py
