[package]
name = "rusty-hunter"
version = "0.1.0"
authors = ["Morten Lied Johansen <mortenjo@ifi.uio.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13.3"
bytes = "1"
zeromq = "0.4.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
schematic = "0.16.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json"] }
serde = { version = "1.0.210", features = ["serde_derive", "derive"] }
serde_json = "1.0.128"
euclid = "0.22.11"

[build-dependencies]
prost-build = { version = "0.13.3" }

[dev-dependencies]
assertables = "8.10.1"
envtestkit = "1.1.2"
pretty_assertions = "1.4.1"
rstest = "0.22.0"
