[package]
name = "sample-rust"
version = "0.1.0"
authors = ["Morten Lied Johansen <mortenjo@ifi.uio.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.8"
bytes = "1"
zeromq = "0.2.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
prost-build = { version = "0.8" }
