[package]
name = "sample-rust"
version = "0.1.0"
authors = ["Morten Lied Johansen <mortenjo@ifi.uio.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
bytes = "1"
zeromq = "0.3.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
schematic = "0.12.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json"] }
serde = { version = "1.0.192", features = ["serde_derive", "derive"] }
serde_json = "1.0.108"
euclid = "0.22.9"

[build-dependencies]
prost-build = { version = "0.12.1" }

[dev-dependencies]
assertables = "7.0.1"
envtestkit = "1.1.2"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
