[project]
name = "codetanks-server"
version = "0.5"
description = "CodeTanks Server"
authors = [
    { name = "Morten Lied Johansen", email = "mortenjo@ifi.uio.no" },
]
dependencies = [
    "setuptools>=78.1.0",
    "fiaas-logging==0.1.1",
    "pinject",
    "protobuf==6.32.1",
    "pygame",
    "pyzmq",
    "euclid",
    "pydantic-settings>=2.8.1",
    "grpcio>=1.71.0",
]
requires-python = "~=3.13.0"
license = { text = "LGPL" }
keywords = ["ibidem codetanks"]


[project.urls]
Homepage = "https://github.com/mortenlj/codetanks"

[project.scripts]
codetanks = "ibidem.codetanks.server.main:main"
codetanks_bot = "ibidem.codetanks.server.cli_bot:main"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "ibidem",
    "ibidem.codetanks",
    "ibidem.codetanks.domain",
    "ibidem.codetanks.server"
]

[tool.uv.sources]
euclid = { git = "https://github.com/euclid3/euclid3" }

[dependency-groups]
dev = [
    "grpcio-tools>=1.71.0",
    "mock>=5.2.0",
    "pytest>=8.3.5",
]
