[project]
name = "codetanks-viewer"
version = "0.5"
description = "CodeTanks Viewer"
authors = [
    { name = "Morten Lied Johansen", email = "mortenjo@ifi.uio.no" },
]
dependencies = [
    "setuptools>=78.1.0",
    "fiaas-logging==0.1.1",
    "protobuf==6.30.2",
    "pygame>=2.0.0.dev12",
    "pyzmq",
    "six",
]
requires-python = "~=3.13"
license = { text = "LGPL" }
keywords = ["ibidem codetanks"]

[project.urls]
Homepage = "https://github.com/mortenlj/codetanks"

[project.gui-scripts]
codetanks-viewer = "ibidem.codetanks.viewer.main:main"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "ibidem",
    "ibidem.codetanks",
    "ibidem.codetanks.domain",
    "ibidem.codetanks.viewer",
    "ibidem.codetanks.viewer.resources"
]
