[project]
name = "codetanks-viewer"
version = "0.5"
description = "CodeTanks Viewer"
authors = [
    { name = "Morten Lied Johansen", email = "mortenjo@ifi.uio.no" },
]
dependencies = [
    "setuptools>=78.1.0",
    "fiaas-logging==0.1.1",
    "protobuf==6.33.5",
    "pygame>=2.0.0.dev12",
    "pyzmq",
    "six",
    "grpcio>=1.71.0",
]
requires-python = "~=3.13.0"
license = { text = "LGPL" }
keywords = ["ibidem codetanks"]

[project.urls]
Homepage = "https://github.com/mortenlj/codetanks"

[project.gui-scripts]
codetanks-viewer = "ibidem.codetanks.viewer.main:main"

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "ibidem",
    "ibidem.codetanks",
    "ibidem.codetanks.domain",
    "ibidem.codetanks.viewer",
    "ibidem.codetanks.viewer.resources"
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.71.0",
]
